kubernetes/apps/kubevirt/rps/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rps
subsets:
  - addresses:
      - ip: "192.168.1.97"
    ports:
      - name: ssh
        port: 22
        protocol: TCP
      - name: http
        port: 80
        protocol: TCP
