kubernetes/apps/kubevirt/rps/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rps
spec:
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
    - name: hook
      port: 80
      protocol: TCP
      targetPort: 9000
    - name: app
      port: 8080
      protocol: TCP
      targetPort: 3456
  selector:
    kubevirt.io/vm: rps
  type: LoadBalancer
