kubernetes/apps/kubevirt/rps/app/httproute.yaml
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app rps
spec:
  hostnames:
    - projects.smbonn.me
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: rps
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: rps
          port: 80
      matches:
      - path:
          type: PathPrefix
          value: /hooks/
